Added player classes